Fix padding+margin spacing within container
Use adjacent sibling combinator (+) to only apply a top margin to
button-links that immediately follow another button-link.

--- a/3-box-model/style.css
+++ b/3-box-model/style.css
@@ -47,9 +47,12 @@ main {
 .button-link {
   display: block;
   padding: 0.5em;
-  margin-top: 1.5em;
   color: #fff;
   background-color: #0090c9;
   text-align: center;
   text-decoration: none;
+}
+
+.button-link + .button-link {
+  margin-top: 1.5em;
 }
